# libiupdate

./: .gitignore  README.md  config.h  configure.ac  libtool
data/: macos_urls.plist
include/libiupdate/: libiupdate.h
src/: bridgeos_catalog.c  macos_catalog.c
